creusot/tests/should_fail/recursion/mutual_through_trait.stderr
error: Mutually recursive functions: when calling <i32 as Foo>::foo...
  --> mutual_through_trait.rs:10:5
   |
10 |     fn foo() {
   |     ^^^^^^^^
   |
note: then <i32 as Foo>::foo calls bar...
  --> mutual_through_trait.rs:11:9
   |
11 |         bar();
   |         ^^^^^
note: finally bar calls <i32 as Foo>::foo.
  --> mutual_through_trait.rs:16:5
   |
16 |     <i32 as Foo>::foo();
   |     ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

